--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     
 	<link rel="stylesheet" href="assets/css/johndoe.css">
+    <meta name="google-site-verification" content="EYG9hMlFVMuDeKpNdUiGaU7kOi2yHjfRgCV-Uss1_rU" />
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
    
